# Shellman

./: CMakeLists.txt  LICENSE  README.md  README.md.orig  README.md.rej  fileManager.cpp  fileManager.hpp  help.cpp  help.hpp  main.cpp  mainview.hpp  makefile
src/: config.cpp  config.hpp  fileManager.cpp  fileManager.hpp  help.cpp  main.cpp  mainview.cpp  mainview.hpp
